--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "formik": "^2.1.3",
     "lodash-es": "^4.17.15",
     "prop-types": "^15.7.2",
+    "rc-slider": "9.0.0-alpha.0",
     "react-quill": "^1.3.3",
     "react-select": "^1.2.1",
     "react-sortable-hoc": "^1.10.1",
