--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@sangre-fp/content-editor",
-  "version": "1.0.5-alpha.0",
+  "version": "1.1.0",
   "main": "dist/index.umd.js",
   "module": "dist/index.modern.mjs",
   "license": "UNLICENSED",
   "dependencies": {
-    "@sangre-fp/connectors": "^1.1.4-alpha.0",
-    "@sangre-fp/i18n": "^1.0.9-alpha.0",
-    "@sangre-fp/ui": "^1.0.6-alpha.0",
+    "@sangre-fp/connectors": "^1.2.0",
+    "@sangre-fp/i18n": "^1.0.9",
+    "@sangre-fp/ui": "^1.1.0",
     "formik": "^2.1.3",
     "lodash-es": "^4.17.15",
     "prop-types": "^15.7.2",
