--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "format": "prettier --write 'src/**/*.js'"
   },
   "devDependencies": {
-    "microbundle": "^0.12.0-next.7",
+    "microbundle": "0.12.0-next.8",
     "prettier": "^1.19.1"
   }
 }
