--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@sangre-fp/content-editor",
-  "version": "1.1.3",
+  "version": "1.2.0-alpha.0",
   "main": "dist/index.umd.js",
   "module": "dist/index.modern.mjs",
   "license": "UNLICENSED",
   "dependencies": {
-    "@sangre-fp/connectors": "^1.2.2",
-    "@sangre-fp/i18n": "^1.0.11",
-    "@sangre-fp/ui": "^1.1.2",
+    "@sangre-fp/connectors": "^1.3.0-alpha.0",
+    "@sangre-fp/i18n": "^1.0.12-alpha.0",
+    "@sangre-fp/ui": "^1.2.0-alpha.0",
     "formik": "^2.1.3",
     "lodash-es": "^4.17.15",
     "prop-types": "^15.7.2",
