--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@sangre-fp/content-editor",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "main": "dist/index.umd.js",
   "module": "dist/index.modern.mjs",
   "license": "UNLICENSED",
   "dependencies": {
-    "@sangre-fp/connectors": "^1.3.0-alpha.8",
-    "@sangre-fp/i18n": "^2.0.1",
-    "@sangre-fp/ui": "^2.0.1",
+    "@sangre-fp/connectors": "^1.3.0",
+    "@sangre-fp/i18n": "^2.0.2",
+    "@sangre-fp/ui": "^2.0.2",
     "formik": "^2.1.3",
     "lodash-es": "^4.17.15",
     "prop-types": "^15.7.2",
