--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@sangre-fp/connectors": "^1.3.4",
     "@sangre-fp/i18n": "^2.0.4",
     "@sangre-fp/ui": "^2.0.10",
+    "@sangre-fp/content-filters": "1.0.3-alpha.0",
     "formik": "^2.1.3",
     "lodash-es": "^4.17.15",
     "prop-types": "^15.7.2",
