--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@sangre-fp/connectors": "^1.4.1",
-    "@sangre-fp/content-filters": "1.0.3-alpha.0",
+    "@sangre-fp/content-filters": "1.0.4",
     "@sangre-fp/i18n": "^2.0.6",
     "@sangre-fp/ui": "^2.0.13",
     "formik": "^2.1.3",
