--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@sangre-fp/content-filters": "^1.0.11",
     "@sangre-fp/i18n": "^2.0.11",
     "@sangre-fp/ui": "^2.0.19",
+    "@sangre-fp/hooks": "^1.0.0",
     "formik": "^2.1.3",
     "lodash-es": "^4.17.15",
     "prop-types": "^15.7.2",
